# BlogSite_Django

./: .dockerignore  .env.docker  .gitignore  Dockerfile  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
.github/workflows/: playwright.yml
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20250302_0744.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_created_at_alter_article_twitter_post_and_more.py  0006_alter_article_options.py  0007_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: asgi.py  settings.py  urls.py  wsgi.py
locale/en_GB/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: form.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
tests/: conftest.py  test_articles.py  test_homepage.py  test_signup.py
tests/pages/: articles.py  auth.py
