[project]
name = "capproj"
version = "0.1.0"
description = ""
authors = [
    {name = "sais888",email = "saisatya.bv04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-allauth[socialaccount] (>=65.4.1,<66.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "django-anymail[mailgun] (>=13.0.1,<14.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise[brotli] (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "capproj", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
django-browser-reload = "^1.18.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
playwright = "^1.54.0"
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangocourse.settings"
